_qxmath.pxd

cdef extern from "QXmathlib/QXmath.h":
    ctypedef struct jwdf_type:
        pass
    double Tc(double p, double t, double td)
    double E_WATER(double td)
    double E_ICE(double td)
    double Qse(double P, double t, double td)
    double Qp(double P, double t)
    double Ttdm(double p, double t, double td, double z)
    double Ttgk(double p,  double t, double td, double z, double v)
    double Etotd(double E)
    double qgk(double p, double td)
    double rgk(double p, double td)
    double Fc(double p, double td)
    double Rm(double p, double t)
    double sqtl(double p, double td, double v)
    void fsfj(double fd, double ff, double *u, double *v)
    void fsfjb(double fd, double ff, double *u, double *v)
    void fshc(double U, double V, double *fd, double *ff)
    double scfsd_zfwg(double u_E, double u_W, double v_N, double v_S, double d)
    double scfwd_zfwg(double v_E, double v_W, double u_N, double u_S, double d)
    double scfsd_jwwg(double u_E, double u_W, double v_N, double v_S, double wgj,  double wd, double v)
    double scfwd_jwwg(double v_E, double v_W, double u_N, double u_S, double wgj, double wd, double u)
    double scfsd_yxy(jwdf_type dat[3])
    double scfwd_yxy(jwdf_type dat[3])
    double showalter(double t8, double td8, double t5)
    double richardson(double pdn, double tdn, double fddn, double ffdn, double pup, double tup, double fdup, double ffup)
    double K(double T8, double Td8, double T7, double Td7, double T5)